k3s/apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  labels: { app.kubernetes.io/name: it-tools }
spec:
  replicas: 1
  selector:
    matchLabels: { app.kubernetes.io/name: it-tools }
  template:
    metadata:
      labels: { app.kubernetes.io/name: it-tools }
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet: { path: "/", port: http }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/", port: http }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: "1", memory: 256Mi }
