k3s/apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  labels: { app.kubernetes.io/name: it-tools }
spec:
  type: ClusterIP
  selector: { app.kubernetes.io/name: it-tools }
  ports:
    - name: http
      port: 80
      targetPort: http
